update test
Signed-off-by: dcs <6716371+uwevil@users.noreply.github.com>